// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders checked 1`] = `
<View>
  <Switch
    onTintColor="rgba(0, 151, 157, 1)"
    onValueChange={[Function]}
    value={true}
  />
  <Text
    style={
      Array [
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`renders not checked 1`] = `
<View>
  <Switch
    onTintColor="rgba(0, 151, 157, 1)"
    onValueChange={[Function]}
    value={false}
  />
  <Text
    style={
      Array [
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;
